# shiv_n_shakti_project

./: README.md  fdcf.py  pyproject.toml
shiv_shakti/: .gitignore  ecosystem.config.js  manage.py
shiv_shakti/core/: .gitignore  admin.py  forms.py  models.py  registration_serializer.py  search_indexes.py  serializers.py  urls.py  utils.py  views.py
shiv_shakti/core/migrations/: .gitignore  0001_initial.py  0002_invitationcode.py  0003_invitation_invitation_code.py  0004_photo_cloud_url.py  0005_remove_userprofile_event.py
shiv_shakti/core/templates/: Privacy-policy.html  footer.html  header.html  index.html  services.html  terms-of-service.html
shiv_shakti/core/templates/core/: invitation_accept.html  invitation_email.html  password_reset_email.html  reset_password_confirm.html
shiv_shakti/core/templates/search/indexes/core/: photo_text.txt
shiv_shakti/shiv_shakti/: asgi.py  settings.py  urls.py  wsgi.py
